--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_weight="0.5" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/iV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2" />
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:onClick="go"
         android:text="Click for image" />
 
     <Space
